# python-homework

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
