[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = "hw3"
authors = ["Roman Kabaev <romakabaev2222@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
